<resources>
    <string name="app_name">Shemá, Deus Chama!</string>
    <string name="go_to">Local do Evento!</string>
    <string name="rota">Clique abaixo para traçar a rota</string>
    <string name="go_to2">Me leve até Lá!</string>
    <string name="soon">"Em Breve!!"</string>
    <string name="soon2">"Em Breve!! Aguarde dia 20/03/17"</string>
    <string name="precos">"Tabela de Preços"</string>
    <string name="api_maps_key">AIzaSyC0aRVqE7vZjCwJ3m3ZpSYEVJ51_Bc4s2A</string>
    <string name="cronog">Cronograma</string>
    <string name="ac">Área Central</string>
    <string name="capela">Capela</string>
    <string name="ptr">Patrocinadores</string>
    <string name="praca">Alimentação</string>
    <string name="pregador">Pregadores</string>
    <string name="day1">Sábado</string>
    <string name="day2">Domingo</string>
    <string name="historia">Sobre</string>
    <string name="faq">Site</string>
    <string name="site">https://www.shemadeuschama.com/</string>
    <string name="sitePatrocinadores">https://www.shemadeuschama.com/patrocinadores</string>
    <string name="help">Mapa</string>
    <string name="title_activity_history">Sobre o Shemá</string>
    <string name="title_cronograma">Cronograma</string>
    <string name="title_main">Shemá, Deus Chama!</string>
    <string name="title_mapa">Local do Evento</string>
    <string name="title_preg">Pregadores</string>
    <string name="au">Ouro</string>
    <string name="pt">Prata</string>
    <string name="brz">Bronze</string>
    <string name="large_text">"      A ideia do Projeto foi apresentada pelo Padre João Evangelista ao Ministério de Música Tabernáculo, após a celebração das 09:30h, no dia 15/11/2015, na Comunidade Santa Clara.
        Ele disse que durante a Missa ficou pensando em um Evento, que envolvesse música, adoração e as comunidades da paróquia, especialmente voltado para os jovens. Disse ainda que havia em seu pensamento um nome, Shemá, e nos pediu que nos colocássemos a serviço, para que esse propósito se tornasse realidade.
        Tão logo o Ministério se dispôs, e no dia seguinte aconteceu a 1ª reunião para tratar a respeito, na qual foi assumido o compromisso de oração diário, terço diário, na intenção do Shemá.
        As ideias foram evoluindo, Deus foi direcionando, e no dia 22/12/2015 houve uma reunião com o Pe. João, na qual foi apresentado o esboço do projeto. Ele aprovou tudo, e pediu que as pessoas fossem chamadas a servir. Ainda nesta reunião o padre direcionou uma leitura bíblica: Samuel Capítulo 3,1-10. Que relata um chamado de Deus para Samuel. Aconteceu no Santuário, onde estava a Arca de Deus, o objeto mais sagrado, representação Própria de Deus entre os homens, que por sua vez ficava dentro do Tabernáculo, uma tenda, uma Tenda Móvel - Morada do Senhor.
        Assim surgiu o "Shemá, Deus chama!""
    </string>
    <string name="shema_cit">"Shemá - palavra oriunda do hebraico, que significa ouve, escuta!
Portanto: Escuta, Deus chama!</string>
    <string name="large_text2">
        "       Surgiu em resposta a um chamado de Deus, assim como chamou por Samuel… Chamou pelo Ministério Tabernáculo, chama a cada um de nós, chama por nossas comunidades, e por muitos outros que sequer sabemos quem são, onde estão, de onde virão… Sabemos apenas que Deus chama, por isso estamos aqui!
       Que possamos responder sempre, assim como Samuel: "Fala Senhor, teu servo escuta"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_scroll">Shemá, Deus Chama!</string>
    <string name="fernandinho">"Fernandinho"</string>
    <string name="fernandinhotext">"
        Fernando A. Costa, nasceu na cidade de Franca, em nove de janeiro de um mil novecentos e oitenta e seis, o jovem Fernando Antônio Costa. De família católica, desde sua infância, Deus despertou um sentido único de viver, fazendo dele uma pessoa especial, chamado a viver o céu e levar a presença de Deus aos que mais precisam, através da Mãe, Maria Santíssima.
        Em várias situações de sua infância mostrou ter um dom diferente, o qual Deus foi moldando aos poucos, aos 12 anos, juntamente com sua Mãe, sua tia e um primo, iniciou aquilo que no futuro seria a Comunidade Cenáculo Imaculado Coração de Maria. Tudo nasceu no seu coração, plantado por Deus e cultivado com o cuidado especial da Virgem Maria.
        Hoje, fundador da Comunidade Cenáculo ("Em Tudo Ser de Deus" - A palavra fundante da qual nasce o carisma da comunidade é “Eis aqui a serva do Senhor, faça-se em mim segundo a vossa palavra” (Lc 1, 38). A contemplação do mistério da encarnação é alimento da nossa identidade, pois ela expressa com toda a riqueza de detalhes o que é viver de fato a radicalidade da vontade de Deus.), é Pai Espiritual de muitos filhos que seguem a Cristo através da Comunidade. Ensina, corrige, ama, sofre, cuida, chora por cada um daqueles que com ele buscam viver a radicalidade do Evangelho, aprendendo com Jesus e o tendo como espelho daquilo que precisamos sonhar para vivermos verdadeiramente como filhos, amando Deus em tudo e buscando Deus em todos.

        “Um Coração Adorador nunca volta atrás”"</string>
    <string name="brisa">Comunidade Brisa Leve</string>
    <string name="brisatext">"
        O nome Brisa Leve, teve como inspiração a passagem de 1Reis 19, 11-15: … O Senhor lhe disse: "Saia e fique no monte, na presença do Senhor, pois o Senhor vai passar". Então veio um vento fortíssimo que separou os montes e esmigalhou as rochas diante do Senhor, mas o Senhor não estava no vento. Depois do vento houve um terremoto, mas o Senhor não estava no terremoto. Depois do terremoto houve um fogo, mas o Senhor não estava nele. E depois do fogo houve o murmúrio de uma brisa suave.
        Quando Elias ouviu, puxou a capa para cobrir o rosto, saiu e ficou à entrada da caverna. E uma voz lhe perguntou: "O que você está fazendo aqui, Elias?"     Ele respondeu: "Tenho sido muito zeloso pelo Senhor, Deus dos Exércitos. Os israelitas rejeitaram a tua aliança, quebraram os teus altares, e mataram os teus profetas à espada. Sou o único que sobrou, e agora também estão procurando matar-me". O Senhor lhe disse: "Volte pelo caminho por aonde veio, e vá para o deserto de Damasco. Chegando lá, unja Hazael como rei da Síria."

        “Depois do terremoto houve um fogo, mas o Senhor não estava nele. E depois do fogo houve o murmúrio de uma brisa suave”.

        O homem da brisa leve é o homem que ouve Deus em seu pior momento… Momento de agonia, tristeza e dor. Ele espera em várias situações pela manifestação de Deus pela qual já obteve respostas, mas a encontra onde não esperava que fosse à forma mais simples… Brisa Suave… Brisa Leve. A esse homem Deus dá uma ordem… Volte ao caminho por aonde veio… Para encontrarmos muitas vezes o caminho nos é necessário voltarmos ao começo. E “Chegando lá, unja…” Chegando onde somos chamados, seja profeta do Altíssimo. Só pode dar aquele que está cheio… Repletos do Espirito Santo.
        O Encontro de Elias com Deus na caverna é o nosso encontro com Deus em nossos momentos de crises e a maneira de superá-la.
        É o momento em que precisamos estar atentos para reconhecermos o anjo de Deus que nos alimenta e nos ajuda na caminhada. Brisa Leve, é se converte e se reencontra consigo, com Deus e com a missão.

        Brisa Leve significa o fato que obrigou Elias a mudar radicalmente de vida e o levou a uma visão totalmente nova das coisas."</string>
    <string name="cristina">"Cristina Mendes"</string>
    <string name="cris1">"Comunidade Luz da Vida</string>
    <string name="sface">Sagrada Face</string>
    <string name="sluz">Sacra Luz</string>
    <string name="dpaz">Dias de Paz</string>
    <string name="ssanto">Solo Santo</string>
    <string name="ruah">Ruah em Missão</string>
    <string name="amtm">Amar-te Mais</string>
    <string name="rs">Rodrigo Santana</string>
    <string name="alex">Alex Soares</string>
    <string name="title_activity_alimentacao">Alimentação</string>
    <string name="title_activity_patrocinadores">Patrocinadores</string>
    <string name="title_activity_folheto">Missa de Abertura</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="texto1">Missa de Abertura Shemá, Deus chama!</string>
    <string name="ritos">"Ritos Iniciais"</string>
    <string name="comentIni">"Comentário Inicial:"</string>
    <string name="comentIniText">"

    Shemá – palavra oriunda do hebraico, que significa ouve, escuta! Portanto: Escuta, Deus chama!.
    Assim como chamou por Samuel, ainda menino a dormir dentro do Santuário, onde se encontrava o Tabernáculo com a Arca da Aliança.
    Samuel ainda não conhecia o Senhor, Samuel não reconhecia a voz do Senhor, e por isso Ele o chamou três vezes… até que instruído por Eli, Samuel respondeu: “Fala Senhor, o teu servo escuta”, e Deus realizou grandes obras através de Samuel e em favor de seu povo!
    Deus nos chama a conhecê-lo melhor, e em sua companhia, sermos melhores…
    Cristãos melhores, pais melhores, filhos e filhas melhores, amigos melhores, irmãos melhores!
    Deus nos chama a partilhar, celebrar, e servir em Comunidade, Deus nos chama a nos doar em favor do próximo, assim como Ele fez…  Seja enquanto Coroinhas, Ministros, Leitores, Músicos, Membros das mais diversas pastorais: Catequese, Acolhida, Legião de Maria, Grupo de Jovens, Grupo de Oração, Ministério de Música, Liturgia, Vicentinos, ECC, Crisma, Batismo… etc
    Deus nos chama a resistir e a persistir…
    Resistir, a tudo o que possa nos afastar Dele!
    E persistir, professando a nossa fé com a vida, sendo Caridosos, Misericordiosos, Piedosos, Verdadeiros… Semelhantes ao Cristo!
    Deus chama por cada um de nós, chama por nossas comunidades, chama por nossa paróquia, chama por você!
    Este ano celebrando o ano Nacional Mariano, com o Shemá todo dedicado a Maria Nossa Mãe, sejamos obedientes ao que ela nos orienta: “Fazei tudo quanto ele vos disser”. João 2:5
    E em resposta a este chamado estaremos todos junto, nestes dois dias, para louvar, rezar, adorar, celebrar em comunhão.
    Estejamos de ouvidos e coração bem abertos, e tenhamos a sabedoria de Samuel ao responder a esse chamado…Sejam muito bem vindos: “Shemá, Deus chama!”
    Todos de pé, com muito entusiasmo, cantemos o canto de entrada e acolhamos o presidente de nossa celebração."</string>
    <string name="cantoEntrada">"1. Canto Entrada</string>
    <string name="acol">"2. Acolhida"</string>
    <string name="acolText">"\n\nPR: Em nome do Pai e do Filho e do Espirito Santo.\n\nAS.: Amém\n\nPR: A graça de Nosso Senhor Jesus Cristo, o amor do Pai e a comunhão do Espirito Santo estejam convosco.\n\nAS.: Bendito seja Deus que nos reuniu no amor de Cristo!\n\n\n*** ENTRADA DE NOSSA SENHORA***"</string>
    <string name="atoP">"3. Ato Penitencial"</string>
    <string name="atoPText">\n\nPR: Somos frágeis e pecadores. Mesmo assim, o Senhor nos ama, convoca e envia para sermos anunciadores de sua misericórdia. Reconheçamos as nossas culpas para bem celebrarmos os santos mistérios.
    \n\nCanto Ato Penitencial\n\n
    PR: Deus, Pai misericordioso tenha compaixão de nós, perdoe os nossos pecados e nos conduza a vida Eterna\n
    AS.: Amém</string>
    <string name="oracaoDia">4. Oração do Dia</string>
    <string name="oracaoDiaText">\n\n
    PR: OREMOS: Velai, ó Deus sobre a nossa família, com incansável amor; e, como só confiamos na vossa graça, guardai-nos sob a vossa proteção. Por nosso Senhor Jesus Cristo, vosso Filho, na unidade do Espírito Santo.\n\n
    AS.: Amém</string>
    <string name="liturgia">Liturgia da Palavra</string>
    <string name="litText">"
    Jesus supre nossa fraqueza, dando-nos forças suficientes para nos tornarmos anunciadores de seu amor e sua misericórdia. Atentos ouçamos, “Shemá, Deus chama!”."</string>
    <string name="firstLeit">5. Primeira Leitura (I Samuel 3, 1-11)</string>
</resources>