<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_events"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.shema.Cronograma">

    <TextView
        android:id="@+id/day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day2"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/ac_day2"
        android:background="@drawable/acentral"
        android:layout_width="185dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/day2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/ac"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ac_day2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/T_acentral1" />

    <ImageButton
        android:id="@+id/capela_day2"
        android:layout_width="185dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/T_acentral1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/capela"/>

    <TextView
        android:id="@+id/T_capela1"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capela_day2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/capela"/>
</RelativeLayout>
