<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fogaiht.shema.MainActivity"
    tools:showIn="@layout/activity_main_scroll">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="10dp"
            android:layout_width="322.5dp"
            android:layout_height="225dp"
            android:layout_gravity="center"
            android:contentDescription=""
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/events"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/historia"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/crono" />

            <ImageButton
                android:id="@+id/historia"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="55dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/sobre" />

            <ImageButton
                android:id="@+id/pregad"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignLeft="@+id/historia"
                android:layout_alignStart="@+id/historia"
                android:layout_below="@+id/sbText"
                android:layout_marginTop="13dp"
                android:background="@drawable/pregad" />

            <ImageButton
                android:id="@+id/mapa"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignLeft="@+id/events"
                android:layout_alignStart="@+id/events"
                android:layout_alignTop="@+id/pregad"
                android:background="@drawable/mapa" />

            <ImageButton
                android:id="@+id/alimento"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignLeft="@+id/mapa"
                android:layout_alignStart="@+id/mapa"
                android:layout_alignTop="@+id/site"
                android:background="@drawable/praca" />

            <ImageButton
                android:id="@+id/site"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/site"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/prgText"
                android:layout_alignLeft="@+id/pregad"
                android:layout_alignStart="@+id/pregad" />

            <ImageButton
                android:id="@+id/advert"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_below="@+id/sText"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/patr" />

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="5sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/adText"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/adText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/ptr"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/advert"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/cronoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/events"
                android:layout_alignStart="@+id/events"
                android:layout_below="@+id/events"
                android:layout_marginTop="11dp"
                android:text="@string/cronog"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sbText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/cronoText"
                android:layout_alignBottom="@+id/cronoText"
                android:layout_alignEnd="@+id/historia"
                android:layout_alignLeft="@+id/historia"
                android:layout_alignRight="@+id/historia"
                android:layout_alignStart="@+id/historia"
                android:text="@string/historia"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/prgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/mapText"
                android:layout_alignBottom="@+id/mapText"
                android:layout_alignEnd="@+id/pregad"
                android:layout_alignLeft="@+id/pregad"
                android:layout_alignRight="@+id/pregad"
                android:layout_alignStart="@+id/pregad"
                android:text="@string/pregador"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/mapText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/mapa"
                android:layout_alignStart="@+id/mapa"
                android:layout_below="@+id/mapa"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="10dp"
                android:text="@string/help"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/alimText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/alimento"
                android:layout_alignEnd="@+id/alimento"
                android:layout_below="@+id/alimento"
                android:layout_marginTop="10dp"
                android:text="@string/praca"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/alimText"
                android:layout_alignBottom="@+id/alimText"

                android:layout_alignEnd="@+id/site"
                android:layout_alignLeft="@+id/site"
                android:layout_alignRight="@+id/site"
                android:layout_alignStart="@+id/site"
                android:layout_below="@+id/site"
                android:layout_marginTop="11dp"
                android:text="@string/faq"
                android:textAlignment="center" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
