<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.shema.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322.5dp"
        android:layout_height="225dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/events"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/historia"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:background="@drawable/crono" />

        <ImageButton
            android:id="@+id/historia"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="141dp"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:background="@drawable/sobre" />

        <TextView
            android:id="@+id/cronoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/events"
            android:layout_alignStart="@+id/events"
            android:layout_below="@+id/events"
            android:layout_marginTop="11dp"
            android:text="@string/crono"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/sobreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cronoText"
            android:layout_alignBottom="@+id/cronoText"
            android:layout_alignEnd="@+id/historia"
            android:layout_alignLeft="@+id/historia"
            android:layout_alignRight="@+id/historia"
            android:layout_alignStart="@+id/historia"
            android:text="@string/historia"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/site"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignLeft="@+id/historia"
            android:layout_alignStart="@+id/historia"
            android:layout_below="@+id/sobreText"
            android:layout_marginTop="13dp"
            android:background="@drawable/site" />

        <ImageButton
            android:id="@+id/mapa"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignLeft="@+id/events"
            android:layout_alignStart="@+id/events"
            android:layout_alignTop="@+id/site"
            android:background="@drawable/mapa" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/sobreText"
            android:layout_alignLeft="@+id/site"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/sobreText"
            android:layout_alignStart="@+id/site"
            android:text="@string/faq"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/mapText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/mapa"
            android:layout_alignStart="@+id/mapa"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp" />
    </RelativeLayout>
</RelativeLayout>
